--- a/src/components/FightScene.css
+++ b/src/components/FightScene.css
@@ -25,7 +25,8 @@ body {
 }
 .gameBoard {
     position: absolute;
-    top:10%;
+    transition: top 0.2s ease, left 0.2s ease;
+
 }
 .imgEnemy {
         max-width: 150px;
@@ -37,14 +38,19 @@ body {
 /* Character containers */
 .PlayerChar, .EnemyChar {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 100%;
     padding: 20px;
     background-color: #3c3f47;
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-    height: 300px;
+    height: 18%;
+}
+.bars {
+    width: 200px;
+
 }
 
 /* Character information */
@@ -56,13 +62,17 @@ body {
 
 .PlayerChar {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
+    z-index: 30;
+    opacity: 0.8;
 }
 .EnemyChar {
     position: absolute;
     top: 0;
     right: 0;
+    width: 10%;
+
 }
 
 button:hover {
@@ -87,7 +97,7 @@ button:disabled:hover {
 /* Styling for the action log div */
 .action-log {
     position:absolute;
-    top: 70%;
+    top: 73%;
     left: 0;
     width: 400px;
     padding: 10px 20px;
@@ -103,6 +113,7 @@ button:disabled:hover {
     overflow-y: auto; /* Permite el scroll si el contenido es más grande */
     list-style-type: none; /* Elimina los puntos de la lista */
     padding-left: 0; /* Asegura que no haya indentación extra */
+    z-index: 31;
 }
 
 /* Estilo para cada mensaje en la lista */
@@ -161,24 +172,39 @@ button:disabled:hover {
 
     /* padding-bottom: 10px */
 }
-.attackAndPotions {
+.attacks {
     display: flex;
-    align-items: center;
-  
+    flex-direction: column;
+    z-index: 40;
+    position: absolute;
+    top: 20%;
+    left: 2%;
+    background-color: #333a42;
+    padding: 1%;
+    opacity: 0.8;
 }
 
 
 
 .container-endBattle {
     position: absolute;
-    left:0;
-    z-index: 2;
+    left:38%;
+    z-index: 41;
     top: 40%;
     display: flex;
     flex-direction: row;
-
+    
 }
-
+.blackScreen {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 40;
+    position: absolute;
+    opacity: 0.5;
+    top:0;
+    left: 0;
+}
 
 #newDesign {
     height: 45px;
