--- a/src/components/FightScene.css
+++ b/src/components/FightScene.css
@@ -1,6 +1,5 @@
-/* General styles */
-body {
 
+body {
     color: #ffffff;
     display: flex;
     align-items: center;
@@ -9,29 +8,13 @@ body {
     margin: 0;
 }
 
-/* Container to hold both characters */
-.fight-scene {
-
-    display: flex;
-    justify-content: space-between;
-    width: 800px;
-    max-width: 900px;
-    padding: 20px;
-    background: linear-gradient(145deg, #333a42, #202428);
-    border-radius: 15px;
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
-
-    
-}
 .gameBoard {
     position: absolute;
     transition: top 0.2s ease, left 0.2s ease;
-
 }
 .imgEnemy {
         max-width: 150px;
-        max-height: 150px;
-        
+        max-height: 150px; 
 }
       
 
@@ -43,38 +26,50 @@ body {
     align-items: center;
     width: 100%;
     padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    height: 16%;
+}
+.blackBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
     background-color: #3c3f47;
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-    height: 18%;
+    height: 16%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 20;
 }
-.bars {
-    width: 200px;
-
-}
-
-/* Character information */
-.PlayerChar p, .EnemyChar p {
-    margin: 5px 0;
-    font-size: 1.1rem;
-    
-}
-
 .PlayerChar {
     position: absolute;
     bottom: 0;
     left: 0;
     z-index: 30;
-    opacity: 0.8;
+    /* opacity: 0.8; */
 }
 .EnemyChar {
     position: absolute;
     top: 10%;
     right: 0;
     width: 10%;
-
+    background-color: #3c3f47;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
-
+/* Character information */
+.PlayerChar p, .EnemyChar p {
+    margin: 5px 0;
+    font-size: 1.1rem;
+}
+.bars {
+    width: 200px;
+}
 button:hover {
     background-color: #d62828;
 }
@@ -82,6 +77,7 @@ button:hover {
     position: absolute;
     top:0;
     left: 50%;
+    z-index: 50;
 }
 button:disabled {
     background-color: #555;
@@ -109,10 +105,10 @@ button:disabled:hover {
     border-top: 2px solid #495057;
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 0 0 10px 10px;
-    max-height: 200px; /* Limita la altura del contenedor */
-    overflow-y: auto; /* Permite el scroll si el contenido es más grande */
-    list-style-type: none; /* Elimina los puntos de la lista */
-    padding-left: 0; /* Asegura que no haya indentación extra */
+    max-height: 200px; 
+    overflow-y: auto; 
+    list-style-type: none; 
+    padding-left: 0; 
     z-index: 31;
 }
 
@@ -170,7 +166,6 @@ button:disabled:hover {
     width: 40px;
     aspect-ratio: 1 / 1;
 
-    /* padding-bottom: 10px */
 }
 .attacks {
     display: flex;
@@ -179,12 +174,25 @@ button:disabled:hover {
     position: absolute;
     top: 5%;
     left: 2%;
+    padding: 1%;
+}
+.blackScreenAttacks{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 5%;
+    left: 2%;
     background-color: #333a42;
     padding: 1%;
-    opacity: 0.8;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+    border-radius: 5%;
 }
 
-
+.espada, .huir{
+    z-index: 1;
+}
 
 .container-endBattle {
     position: absolute;
@@ -215,9 +223,6 @@ button:disabled:hover {
 
 .defetedMessage {
     position: absolute;
-    /* width: 200px;
-    height: 80px;
-    background-color: #495057; */
     left: 45%;
     z-index: 2;
 }
