--- a/src/components/battlefield/GameBoard.css
+++ b/src/components/battlefield/GameBoard.css
@@ -28,7 +28,7 @@
   }
   
 
-  .lobo {
+  .playerChar {
     position: absolute;
     width: 10vw;
     height: 20vw;
@@ -50,7 +50,17 @@
     transform: translate(45vw, 0vw);
 
   }
-
+.summon{
+  position: absolute;
+  width: 5vw;
+  height: 10vw;
+  margin: 0;
+  padding: 0;
+  transition: transform 0.3s ease;
+  z-index: 19;
+  /* Posición inicial del cuadrado verde */
+  transform: translate(45vw, 0vw);
+}
 
 
 .highlighted {
