--- a/src/components/FightScene.css
+++ b/src/components/FightScene.css
@@ -18,58 +18,8 @@ body {
 }
       
 
-/* Character containers */
-.PlayerChar, .EnemyChar {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-    height: 16%;
-}
-.blackBar {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    background-color: #3c3f47;
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-    height: 16%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 0.7;
-    z-index: 20;
-}
-.PlayerChar {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 30;
-    /* opacity: 0.8; */
-}
-.EnemyChar {
-    position: absolute;
-    top: 10%;
-    right: 0;
-    width: 10%;
-    background-color: #3c3f47;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-}
-/* Character information */
-.PlayerChar p, .EnemyChar p {
-    margin: 5px 0;
-    font-size: 1.1rem;
-}
-.bars {
-    width: 200px;
-}
+
+
 button:hover {
     background-color: #d62828;
 }
@@ -93,16 +43,18 @@ button:disabled:hover {
 /* Styling for the action log div */
 .action-log {
     position:absolute;
-    top: 73%;
-    left: 0;
-    width: 400px;
-    padding: 10px 20px;
+    top: 80.5%;
+    left: 5%;
+    width: 22%;
+    height: 13%;
+    padding: 2px 20px;
+
     margin-top: 20px;
     background-color: #343a40;
     color: #ffffff;
     font-size: 1rem;
-    text-align: left;
-    border-top: 2px solid #495057;
+    text-align: center;
+
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
     border-radius: 0 0 10px 10px;
     max-height: 200px; 
@@ -117,43 +69,6 @@ button:disabled:hover {
     margin: 5px 0;
     font-weight: bold;
     color: #ffc107;
-}
-
-.experience-bar-container, .health-bar-container {
-    width: 100%;
-    height: 20px;
-    background-color: #ccc;
-    border-radius: 10px;
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-   
-}
-
-.experience-bar, .health-bar {
-    height: 100%;
-    border-radius: 10px;
-}
-
-.experience-bar {
-    background-color: #7903af;
-}
-
-.health-bar {
-    background-color: #28a745;
-}
-
-.experience-text, .health-text {
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    color: black; /* Texto negro para contraste */
-    font-weight: bold;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    text-shadow: none;
-    text-justify: center;
 }
 
 
@@ -254,3 +169,117 @@ button:disabled:hover {
    
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Opcional: Sombra */
   }
+
+/* *********************PLAYER CHARACTER TSX***************/
+  .charFightSceneDescription {
+    margin-right: 10px;
+}
+
+/* Character containers */
+.PlayerChar, .EnemyChar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    height: 19%;
+}
+
+.blackBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* padding: 20px; */
+    background-color: #3c3f47;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    height: 16%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 20;
+}
+.PlayerChar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 30;
+
+    /* opacity: 0.8; */
+}
+.EnemyChar {
+    position: absolute;
+    top: 10%;
+    right: 0;
+    width: 13%;
+    height: 30%;
+    background-color: #3c3f47;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+}
+/* Character information */
+.PlayerChar p, .EnemyChar p {
+    margin: 1px 0;
+    font-size: 1.1rem;
+}
+
+
+
+.bars {
+    width: 300px;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.experience-text, .health-text {
+    width: 100%;
+    color: rgb(255, 255, 255); /* Texto negro para contraste */
+    font-weight: bold;
+    z-index: 1;
+}
+
+.heal-bar-container-text{
+    height: 60%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    width: 100%;
+}
+
+.experience-bar-container, .health-bar-container, .mana-bar-container {
+    width: 60%;
+    height: 70%;
+    background-color: #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.experience-bar, .health-bar, .mana-bar {
+    height: 100%;
+    border-radius: 10px;
+
+}
+.mana-bar{
+    background-color: #2e71ee;
+
+}
+.experience-bar {
+    background-color: #7903af;
+    align-self: flex-start;
+}
+
+.health-bar {
+    background-color: #f32222;
+
+
+}
