--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -1,4 +1,5 @@
 .landingContainer {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,8 +11,10 @@
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(102, 102, 102, 0.1);
     /* font-family: 'Arial', sans-serif; */
- 
+    z-index: 4;
 }
+
+
 .landingTitleContainer {
     display: flex;
     flex-direction: row;
@@ -30,25 +33,7 @@
     width:250px ;
 
 }
-  button {
-    display: block;
-    margin: 10px auto;
-    padding: 8px 12px;
-    border: none;
-    background-color: #8b4513;
-    color: #fff;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 
-button:hover {
-    background-color: #a0522d; /* Match hover effect of list items */
-}
-button:active {
-    transform: scale(0.95);
-}
 
 .playerLoaderButton {
     display: flex;
@@ -61,4 +46,8 @@ button:active {
 .playerLoadButton {
     width: 10px;
 
+}
+
+.yourName{
+    font-size: 25px;
 }
