--- a/src/components/UI/designRpg.css
+++ b/src/components/UI/designRpg.css
@@ -325,6 +325,7 @@ label {
 .rpgui-container {
   /* position style and default z */
   /* position: fixed; */
+  position: relative;
   z-index: 10;
   overflow: show; }
 
