--- a/src/components/battlefield/GameBoard.css
+++ b/src/components/battlefield/GameBoard.css
@@ -12,11 +12,12 @@
     width: 60vw;
     height: 50vw;
     /* background: var(--purple-0); */
-    position: relative;
+   
+    
 
   }
 
-  .bottom {
+  .bottomGB {
     width: 5vw;
     height: 5vw;
     /* background-color: rgb(158, 158, 255); */
@@ -26,7 +27,15 @@
     border: 2px solid black; 
     z-index: 3;
   }
-  
+ 
+  .border {
+    position: absolute;
+    background-color: rgb(0, 128, 0);
+    pointer-events: none; /* No interactivo */
+    z-index: 3;
+    background-image: none;
+    opacity: 0.3;
+  }
 
   .playerChar {
     position: absolute;
@@ -68,4 +77,5 @@
   z-index: 5;
   background-image: linear-gradient(rgba(148, 111, 111, 0.5), rgba(149, 71, 71, 0.5)), 
   url('/img/assets/grass/grass1.png');
+  
 }   
