--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,19 @@ button:hover {
 button:active {
   transform: scale(0.95);
 }
+
+.soundPlayerSimbol{
+  width: 50px;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+
+  border-radius: 50%;
+}
+
+.buttonSoundToggle{
+  height: 40px;
+  border-radius: 50%;
+  padding: 0px 0px;
+}
+
+.soundPlayerSimbol:hover {-webkit-filter: brightness(120%); }
