--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,15 +1,6 @@
 .home-container {
-    position: fixed; /* Fija el contenedor en la pantalla */
-    top: 0;
-    left: 0;
-    /* width: 100%; */
-    height: 50vh; /* Ocupa toda la altura de la ventana */
-    margin-top: 10%;
-    margin-left: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Centra el contenido */
-    align-content: flex-start; /* Alinea el contenido al principio */
+    margin-right: 10%;
+    margin-left: 30%;
     z-index: 50; /* Asegura que esté por encima de otros elementos */
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
 }
@@ -71,12 +62,12 @@
     flex-grow: 1; /* Permite ocupar espacio disponible */
 }
 
-.buttons {
+.buttonsHome {
     margin-left: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-left: 50px;
-    margin-right: 50px;
+
     /* width: calc(100% - 350px); */
     /* margin-left: 30%; */
     /* margin-left: 250px;  */
@@ -109,10 +100,10 @@
     position: relative;
 }
 .playerAvatar {
-    
     width: 200px;
-
 }
+.playerAvatar:hover {-webkit-filter: brightness(120%); }
+
 .home-container.hidden {
     opacity: 0;
     transition: opacity 0.5s ease, transform 0.5s ease;
@@ -141,6 +132,8 @@
 
 
 .buttonPrueba{
-    width: 200px;
+    width: 70%;
     cursor: url("./designImg/cursor/point.png") 10 0, auto;
 }
+
+.buttonPrueba:hover {-webkit-filter: brightness(120%); }
