agregados de diseño

--- a/src/components/battlefield/GameBoard.css
+++ b/src/components/battlefield/GameBoard.css
@@ -100,23 +100,19 @@
 
 
 .attack-range {
-    /* background-image: linear-gradient(rgba(246, 255, 0, 0.5), rgba(149, 71, 71, 0.5)), 
-  url('/img/assets/grass/grass1.png'); */
-  /* border-color: #ff4f4f; */
-
   z-index: 6;
-
   animation: borderGlow 0.5s infinite alternate;
 }
-
+.magic-range{
+  z-index: 6;
+  animation: borderMagicGlow 0.5s infinite alternate;
+}
 /* Definir la animación para el borde brillante y crecimiento */
 @keyframes borderGlow {
-  0% {
-
-    box-shadow: 0 0 2px 3px #38a03a;
-  }
-  100% {
-
-    box-shadow: 0 0 5px 5px #38a03a;
-  }
+  0% { box-shadow: 0 0 2px 3px #38a03a;}
+  100% {box-shadow: 0 0 5px 5px #38a03a;}
+}
+@keyframes borderMagicGlow {
+  0% { box-shadow: 0 0 2px 3px #386ea0;}
+  100% {box-shadow: 0 0 5px 5px #4138a0;}
 }
