--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,36 @@ button:active {
 }
 
 .soundPlayerSimbol:hover {-webkit-filter: brightness(120%); }
+
+
+.back-button-design{
+  width: 150px;
+}
+.back-button-design:hover {-webkit-filter: brightness(120%); }
+
+/* BOTON COMUN */
+
+.button-edited-container{
+  position: relative;
+
+
+  /* background-color: #3498db; */
+}
+.button-edited-container p{
+text-align: center;
+position: relative;
+top: 0;
+margin-top: 0px;
+height: 100%;
+z-index: 2;
+}
+.common-button{
+  position: absolute;
+  z-index: 1;
+  top: -100%;
+  /* left: 5%; */
+  width: 200px;
+}
+.button-edited-container:hover {-webkit-filter: brightness(120%); }
+
+
