--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -38,8 +38,11 @@
 .playerLoaderButton {
     display: flex;
     flex-direction: row;
-    max-height: 60px;
-    align-items: center;
+    max-height: 40px;
+    margin-bottom: 10px;
+
+
+    /* align-items: center; */
 
 }
 
