--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -67,7 +67,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 500px;
+    max-height: 800px;
     max-width: 900px;
     min-width: 900px;
     border-radius: 5px;
@@ -78,12 +78,14 @@ a {
     display: flex;
     justify-content: flex-start;
     gap: 20px;
-    max-height: 300px;
+    max-height: 380px;
+    
 }
 
 
 
 .detailsContainer {
+    position: relative;
     width: 300px;
     background-color: #8b4513;
     border-radius: 10px;
@@ -92,6 +94,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .detailsContainer h2 {
