--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,7 @@
 .home-container {
   margin-right: 10%;
   margin-left: 30%;
+  margin-top: 40px;
   z-index: 50; /* Asegura que esté por encima de otros elementos */
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
 }
@@ -147,12 +148,12 @@
   left: 50%;
   width: 18%;
   z-index: 51;
-  transition: top 0.3s ease-in-out; /* Agrega esta propiedad para hacer la transición suave */
+  transition: top 0.3s ease-in-out; 
 }
 
 .principalSign:hover {
   -webkit-filter: brightness(120%);
-  top: 0px; /* El signo bajará a 0px cuando se haga hover */
+  top: 0px; 
 }
 
 
@@ -162,4 +163,40 @@
   left: 10%;
   width: 100%;
   z-index: 49;
+}
+
+
+@media (max-width: 1360px) and (max-height: 768px) {
+  .principalSign {
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    width: 18%;
+    z-index: 51;
+    transition: top 0.3s ease-in-out; 
+  }
+  .principalSign:hover {
+    -webkit-filter: brightness(120%);
+    top: 10px; 
+  }
+  .home-container {
+    margin-right: 10%;
+    margin-left: 30%;
+    margin-top: 100px;
+    z-index: 50; /* Asegura que esté por encima de otros elementos */
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+  }
+  .sidebar.open {
+    display: flex;
+    width: 250px;
+    transform: translateX(0);
+    margin-top: 30px;
+    max-height: 580px;
+  }
+  .sidebar.open p {
+    font-size: 1.1rem;
+  }
+  .playerAvatar {
+    width: 150px;
+  }
 }
