--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -36,8 +36,8 @@
   display: flex;
   flex-direction: row;
   max-height: 40px;
-  margin-bottom: 10px;
 
+  margin-top: 20px;
   /* align-items: center; */
 }
 
@@ -86,4 +86,19 @@
     font-size: 18px;
     margin-top: 10px;
   }
+}
+
+
+.createAccount {
+  display: flex;
+  flex-direction: row;
+  font-size: 15px;
+  align-items: center;
+  margin-top: 5px;
+  justify-content: center;
+
+}
+.createAccount p {
+    margin-left: 5px;
+    margin-bottom: 1px;
 }
