--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -62,7 +62,7 @@ a {
   text-decoration: none; /* Elimina el subrayado por defecto */
 }
 
-.secctionInventory {
+.sectionInventory {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -99,4 +99,34 @@ a {
 
 .detailsContainer p {
   margin: 5px 0;
+}
+
+@media (max-width: 1360px) and (max-height: 768px) {
+  .sectionInventory {
+    max-height: 500px;
+  }
+
+  .inventoryLayout {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  max-height: 250px;
+  }
+
+  .itemIventoryImg {
+    width: 60px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover; 
+  }
+  .detailsContainer h2 {
+    margin-bottom: 10px;
+    margin-top: 0px;
+    text-align: center;
+    font-size: 20px;
+  }
+  .detailsContainer p {
+    margin: 5px 0;
+    font-size: 15px;
+  }
+  
 }
