terminé base para historia

--- a/src/components/CharacterSelector.css
+++ b/src/components/CharacterSelector.css
@@ -3,19 +3,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
-  margin: 0 auto;
-  margin-top: 30px;
   max-width: 800px;
-  /* max-height: 550px;  */
   overflow-y: auto; /* Permite el scroll si el contenido es más grande */
-  background-color: rgba(128, 88, 50, 0.74);
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(102, 102, 102, 0.1);
   font-family: 'Arial', sans-serif;
   height: 750px;
   width: 600px;
   padding: 1px;
+  margin-top: 0px;
 }
 
 .containerClases h1 {
@@ -37,8 +33,8 @@
   justify-items: center;
   align-items: center;
   width: 80%;
-  margin-top: 20px;
-  /* gap: 60px; */
+  margin-top: 50px;
+  gap: 60px;
   
 }
 .nameHeader{
@@ -218,5 +214,7 @@ a:hover {
     margin-bottom: 10px;
     margin-top: 5px;
   }
-  
+  .buttonsClasses{
+    gap: 0px;
+  }
 }
