--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,9 +8,11 @@
 
 .sidebar {
   position: fixed;
-  top: 0;
+  top:0px;
   left: 0;
-  height: 100%;
+  height: 96%;
+  margin-top: 37px;
+
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s ease;
   display: flex;
@@ -76,7 +78,7 @@
 }
 
 .buttons button {
-  /* padding: 10px; */
+
   background-size: 100% 100%;
 }
 
