--- a/src/components/storyMode/StoryMode.css
+++ b/src/components/storyMode/StoryMode.css
@@ -23,17 +23,21 @@
   
   .chapter-cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 15px;
   }
   
   .chapter-card {
+
     background-color: #f0f0f0;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
-
+    width: 150px;
+    height: 150px;
     transition: transform 0.3s;
+    
   }
   
   .chapter-card:hover {
@@ -47,7 +51,7 @@
   .chapter-container {
     height: 700px;
     width: 900px;
-    background-image: url("/img/story/chapter-001.png");
+    /* background-image: url("/img/story/chapter-001.png"); */
     background-repeat: no-repeat;
     background-size: contain;
   }
@@ -66,7 +70,36 @@
    
   }
   .dialog-bar{
-    width: 100%;
+    width: 95%;
+    min-height: 100px;
+    /* background-image: url('/img/UI/dialog-box2.png'); */
+    background-image: none;
+    border-style: solid;
+    border-image-source: none;
+    border-color: rgb(107, 106, 106);
+    margin-bottom: 5px;
+    background-color: rgba(61, 61, 61, 0.77);
+    padding: 5px;
+    position: relative;
+    
+  }
+  .indicator-arrow-dialog {
+    position: absolute;
+    right: 20px;
+    top: 40%;
+    width: 30px;
+  
+    /* Animación de parpadeo */
+    animation: blink 1s infinite;
+  }
+  
+  @keyframes blink {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
   }
 
   @media (max-width: 1360px) and (max-height: 768px) {
@@ -85,6 +118,7 @@
     
     .chapter-cards {
       display: grid;
+      grid-template-rows: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
       gap: 15px;
     }
@@ -106,6 +140,6 @@
     }
     .chapter-container {
       height: 500px;
-
+      
     }
   }
