--- a/src/components/storyMode/StoryMode.css
+++ b/src/components/storyMode/StoryMode.css
@@ -85,6 +85,7 @@
     padding: 5px;
     position: relative;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5), inset 0px 2px 5px rgba(255, 255, 255, 0.2);
+    user-select: none; 
   }
   .indicator-arrow-dialog {
     position: absolute;
