--- a/src/components/storyMode/StoryMode.css
+++ b/src/components/storyMode/StoryMode.css
@@ -6,13 +6,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
+
   }
   
   .story-title {
     text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
+    user-select: none; 
   }
   
   .pagination {
@@ -92,16 +93,16 @@
     right: 20px;
     top: 40%;
     width: 30px;
-  
+    user-select: none; 
     /* Animación de parpadeo */
     animation: blink 1s infinite;
   }
   .npc-speaker-image {
     width: 300px;
     position: absolute;
-    top: -190px;
+    top: -290px;
     right: 20px;
-
+    user-select: none; 
   }
   .dialog-bar.speakerLine{
     position: absolute;
