--- a/src/components/itemsStore/ItemShop.css
+++ b/src/components/itemsStore/ItemShop.css
@@ -58,6 +58,7 @@
   max-height: 100px;
   font-size: 15px;
 }
+
 .itemImg {
   width: 60px;
   height: 50px;
@@ -84,8 +85,17 @@
 }
 .itemName {
   margin-bottom: 0px;
+  font-weight: 600;
+  /* font-family: 'Open Sans', Arial, Helvetica, sans-serif; */
+  /* text-shadow: 0px 1px 4px rgba(0, 0, 0, 1); */
+  font-size: 17px;
+  filter: brightness(1.5); 
 }
-
+.item-card:hover {
+  filter: brightness(1.1); 
+  /* box-shadow: 0 4px 8px rgba(255, 255, 255, 0.4);  */
+  /* transform: scale(1.05);  */
+}
 .catalog-button {
   height: 30%;
 }
