--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -67,11 +67,12 @@ a {
   flex-direction: column;
   align-items: center;
   max-height: 800px;
-  max-width: 900px;
+  max-width: 1100px;
   min-width: 900px;
   border-radius: 5px;
   z-index: 1;
 }
+
 
 .inventoryLayout {
   display: flex;
@@ -101,6 +102,66 @@ a {
   margin: 5px 0;
 }
 
+.containerEquipment{
+  display: grid;
+  grid-template-areas:
+    "face head shoulder"
+    ". chest back"
+    "gloves belt boots"
+    ". legs .";
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 10px; 
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background: #2c2c2c; /* Fondo oscuro para el inventario */
+  border: 4px solid gold; /* Borde estilo RPG */
+  border-radius: 10px;
+}
+.containerEquipment img {
+  width: 100px; /* Ajusta el tamaño de las imágenes */
+  height: 100px;
+  object-fit: cover; /* Mantiene el contenido dentro del área definida */
+  border: 2px solid #555; /* Borde simple para las imágenes */
+  border-radius: 5px;
+  background: #a0522d; /* Fondo detrás de cada imagen */
+}
+.head {
+  grid-area: head;
+}
+
+.belt {
+  grid-area: belt;
+}
+
+.rightHand {
+  grid-area: rightHand;
+}
+
+.back {
+  grid-area: back;
+}
+
+.boots {
+  grid-area: boots;
+}
+
+.gloves {
+  grid-area: gloves;
+}
+.chest{
+  grid-area: chest;
+}
+.legs{
+  grid-area: legs;
+}
+.face {
+  grid-area: face;
+}
+.shoulder {
+  grid-area: shoulder;
+}
 @media (max-width: 1360px) and (max-height: 768px) {
   .sectionInventory {
     max-height: 500px;
