--- a/src/components/itemsStore/ItemShop.css
+++ b/src/components/itemsStore/ItemShop.css
@@ -46,16 +46,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border: 1px solid #ccc;
+  border: 6px solid #ccc;
   text-align: center;
-  min-height: 160px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  min-height: 150px;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgb(0, 0, 0);
+  box-Shadow: inset 0 0 10px rgba(0, 0, 0, 0.7);
   margin-left: 5px;
   margin-right: 5px;
   align-items: center;
   background-color: rgba(112, 68, 26, 0.644);
-  max-height: 100px;
   font-size: 15px;
 }
 
@@ -64,6 +64,7 @@
   height: 50px;
   aspect-ratio: 1 / 1;
   object-fit: cover; /* Ajusta la imagen para cubrir el área sin deformarla */
+  filter: drop-shadow(3px 3px 0.5px rgba(0, 0, 0, 0.7));
 }
 .back-button {
   margin-top: 20px;
