--- a/src/components/battlefield/GameBoard.css
+++ b/src/components/battlefield/GameBoard.css
@@ -42,6 +42,15 @@
   transition: transform 0.3s ease;
   z-index: 20;
 }
+.petChar {
+  position: absolute;
+  width: 4vw;
+  aspect-ratio: 1/2;
+  margin: 0;
+  padding: 0;
+  transition: transform 0.3s ease;
+  z-index: 21;
+}
 
 .enemy {
   position: absolute;
