--- a/src/components/UI/designRpg.css
+++ b/src/components/UI/designRpg.css
@@ -33,6 +33,8 @@
   background-color: Transparent;
 }
 
+
+
 /* button clicked */
 .rpgui-button.down,
 .rpgui-button:active {
@@ -130,6 +132,14 @@ label {
     url('../designImg/cursor/point.png') 10 0,
     auto !important;
 }
+.rpgui-cursor-grab-open,
+.rpgui-cursor-grab-open * {
+  cursor: url("../designImg/cursor/grab-open.png") 10 0, auto !important; }
+
+.rpgui-cursor-grab-close,
+.rpgui-cursor-grab-close * {
+  cursor: url("img/cursor/grab-close.png") 10 0, auto !important; }
+  
 
 /* pointer / hand cursor, not important, for all elements that have pointer by-default */
 .rpgui-content a,
@@ -566,4 +576,34 @@ ul.rpgui-dropdown-imp {
 /* dropdown hover */
 .rpgui-dropdown-imp:hover {
   color: yellow;
+}
+
+
+.rpgui-content input[type=checkbox].rpgui-checkbox {
+  display: none; }
+
+.rpgui-content input[type=checkbox].rpgui-checkbox + label {
+  background: url("../designImg/checkbox/checkbox-off.png") no-repeat;
+  line-height: 24px;
+  display: inline-block;
+  background-size: auto 100%;
+  padding-left: 34px;
+  height: 45px;
+  width: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px; 
+  -webkit-filter: brightness(110%);
+  filter: drop-shadow(3px 3px 0.5px rgba(0, 0, 0, 0.7))
+}
+
+  
+
+.rpgui-content input[type=checkbox].rpgui-checkbox:checked + label {
+  background: url("../designImg/checkbox/checkbox-on.png") no-repeat;
+  line-height: 24px;
+  display: inline-block;
+  background-size: auto 100%;
+  padding-left: 34px;
+  height: 45px;
+  width: 10px;
 }
