--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ button:active {
 
 .button-edited-container {
   position: relative;
-
+  display: inline-block;
   /* background-color: #3498db; */
 }
 .button-edited-container p {
