--- a/src/components/bestiary/Bestiary.css
+++ b/src/components/bestiary/Bestiary.css
@@ -75,3 +75,8 @@
   cursor: not-allowed;
   background-color: #ddd;
 }
+@media (max-width: 1360px) and (max-height: 768px) {
+  .bestiaryContainer{
+    max-height: 550px;
+  }
+}
