--- a/src/components/itemsStore/ItemShop.css
+++ b/src/components/itemsStore/ItemShop.css
@@ -7,7 +7,6 @@
   margin: 0 auto;
   text-align: center;
   max-width: 900px;
-
   z-index: 1;
   padding-bottom: 20px;
   background-color: rgba(128, 88, 50, 0.74);
@@ -180,4 +179,14 @@
   100% {
     background-position: 0% 50%;
   }
+}
+
+
+@media (max-width: 1360px) and (max-height: 768px) {
+.item-shop-container{
+  max-height: 550px;
+}
+.inventoryIcons {
+  width: 80px;
+}
 }
