--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -1,15 +1,16 @@
 .containerInventory {
   /* background-color: #d2691e;  */
   width: 300px;
-  height: 350px;
-  max-height: 400px;
+  /* height: 350px;
+  max-height: 400px; */
   /* border: 2px solid #8b4513;  */
   border-radius: 1px; /* Rounded corners */
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
   padding: 10px;
-  overflow-y: auto; /* Scroll if content exceeds height */
+  overflow-y:scroll;
   /* font-family: Arial, sans-serif;  */
   color: #fff;
+  
 }
 .rpgui-list-imp {
   min-height: 220px;
@@ -19,8 +20,9 @@
 
 .buttonsInventory {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-bottom: 10px;
+
 }
 
 .containerInventory h1 {
@@ -74,13 +76,16 @@ a {
   min-width: 900px;
   border-radius: 5px;
   z-index: 1;
+
 }
 
 .inventoryLayout {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  max-height: 520px;
   gap: 20px;
-  max-height: 380px;
+  /* max-height: 380px; */
 }
 
 .detailsContainer {
@@ -120,8 +125,24 @@ a {
   align-items: center;
   padding: 20px;
   background: #2c2c2c; /* Fondo oscuro para el inventario */
-
   border-radius: 10px;
+}
+
+/* @keyframes expandWidth {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+} */
+.accessoriesContainer {
+  display: flex;
+  flex-direction: column;
+
+  overflow: hidden;
+  animation: expandWidth 1s forwards;
+  align-items: center;
 }
 .accesoriesEquipment {
   grid-template-areas:
@@ -130,9 +151,17 @@ a {
     '. earring-0 amulet earring-1 .';
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+.containerEquipment {
+
+  overflow: hidden;
+  animation: expandWidth 1s forwards;
+}
 .containerWeaponEquip {
   grid-template-areas: 'rightHand leftHand';
   grid-template-columns: 1fr 1fr;
+
+  overflow: hidden;
+  animation: expandWidth 1s forwards;
 }
 
 .default-image {
@@ -155,8 +184,8 @@ a {
 .containerEquipment img,
 .containerWeaponEquip img,
 .accesoriesEquipment img {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   object-fit: cover; /* Mantiene el contenido dentro del área definida */
   border: 2px solid #555; /* Borde simple para las imágenes */
   border-radius: 5px;
@@ -166,12 +195,7 @@ a {
   width: 60px;
   height: fit-content;
 }
-.accessoriesContainer {
-  display: flex;
-  flex-direction: column;
 
-  align-items: center;
-}
 .amulet {
   grid-area: amulet;
   margin-top: 30px;
@@ -221,7 +245,7 @@ a {
 }
 
 .inventoryIcons {
-  width: 100px;
+  width: 80px;
   height: fit-content;
 }
 .lines {
@@ -234,14 +258,12 @@ a {
   .sectionInventory {
     max-height: 550px;
   }
-  .inventoryIcons {
-    width: 90px;
-  }
+
   .inventoryLayout {
     display: flex;
     justify-content: flex-start;
     gap: 20px;
-    max-height: 250px;
+    /* max-height: 250px; */
   }
 
   .itemIventoryImg {
