--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -74,9 +74,10 @@ a {
   max-height: 800px;
   max-width: 1100px;
   min-width: 900px;
+  min-height: 800px;
   border-radius: 5px;
   z-index: 1;
-
+  justify-content: space-between
 }
 
 .inventoryLayout {
@@ -91,9 +92,10 @@ a {
 .detailsContainer {
   position: relative;
   width: 300px;
+  height: 200px;
   background-color: #8b4513;
   border-radius: 10px;
-  padding: 10px;
+  
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -103,6 +105,7 @@ a {
 .detailsContainer h2 {
   margin-bottom: 10px;
   text-align: center;
+  font-size:  20px;
 }
 
 .detailsContainer p {
